--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ branches:
 
 env:
   global:
-    - REF=github.com/coco723/book.git # 设置 github 地址
+    - REF=github.com/coco723/gitbook-template.git # 设置 github 地址
